// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Center widget renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <Text>
    Container
  </Text>
</View>
`;

exports[`Center widget renders correctly when no children 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
/>
`;
